python/testData/quickFixes/PyTypeHintsQuickFixTest/referenceToListInTupleAsTypingMemberParameter.py
from typing import Callable

l1 = [int]
foo5: Callable[[int], <error descr="Parameters to generic types must be types">l<caret>1</error>] = None